--- a/Chapter 2 - Statistical Learning.ipynb
+++ b/Chapter 2 - Statistical Learning.ipynb
@@ -26,7 +26,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This exercise relates to the College data set, which can be found in the file College.csv on the book website. It contains a number of variables for 777 different universities and colleges in the US. \n",
+    "## This exercise relates to the College data set\n",
+    "\n",
+    "Which can be found in the file College.csv on the book website. It contains a number of variables for 777 different universities and colleges in the US. \n",
     "\n",
     "The variables are:\n",
     "\n",
@@ -966,7 +968,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**This exercise involves the Auto data set studied in the lab. Make sure that the missing values have been removed from the data.**\n",
+    "## This exercise involves the Auto data set studied in the lab. \n",
+    "\n",
+    "Make sure that the missing values have been removed from the data.\n",
     "\n",
     "    Which of the predictors are quantitative, and which are qualitative?"
    ]
@@ -1927,7 +1931,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**This exercise involves the Boston housing data set.**\n",
+    "## This exercise involves the Boston housing data set.\n",
     "\n",
     "    To begin, load in the Boston data set, which is part of the ISLP library."
    ]
