--- a/Chapter 3 - Liner Regression.ipynb
+++ b/Chapter 3 - Liner Regression.ipynb
@@ -4750,7 +4750,7 @@
     }
    ],
    "source": [
-    "# Define response variable (mpg) and predictor variables\n",
+    "# Define response variable (crim) and predictor variables\n",
     "response_variable = df['crim']\n",
     "predictor_variables = df.drop(columns=['crim'])\n",
     "\n",
